Adjust admin pages and remove unneccessary filesfiles

--- a/admin/index/homePage.html
+++ b/admin/index/homePage.html
@@ -53,7 +53,7 @@
               <p style="color: black; text-align: center; font-size: 10x;">Khách hàng</p>
             </div>
           </a>
-          <a href="orderPage1.php" style="text-decoration: none; color: black;">
+          <a href="orderPage.html" style="text-decoration: none; color: black;">
             <div class="container-function-selection">
               <button class="button-function-selection">
                 <i class="fa-solid fa-list-check" style="font-size: 18px; color: #FAD4AE;"></i>
@@ -163,7 +163,7 @@
         <p>Khách hàng</p>
       </div>
     </a>
-    <a href="orderPage1.php" style="text-decoration: none; color: black;">
+    <a href="orderPage.html" style="text-decoration: none; color: black;">
       <div class="container-function-selection">
         <button class="button-function-selection">
           <i class="fa-solid fa-list-check" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -213,7 +213,7 @@
     <div class="order-section">
 
       <p class="section-title">Đơn hàng chưa xử lý</p>
-      <a class="more-detail" href="orderPage1.php"> Xem thêm</a>
+      <a class="more-detail" href="orderPage.html"> Xem thêm</a>
       <div class="overview-order">
         <div><img class="avatar-customer" src="../image/sontung.webp" alt="Customer"></div>
         <div class="info-overview-order">
