--- a/admin/index/orderPage.html
+++ b/admin/index/orderPage.html
@@ -9,34 +9,122 @@
   <link rel="stylesheet" href="../style/sidebar.css">
   <link href="../icon/css/all.css" rel="stylesheet">
   <link href="../style/generall.css" rel="stylesheet">
-  <link href="../style/main.css" rel="stylesheet">
+  <link href="../style/main1.css" rel="stylesheet">
   <link href="../style/orderStyle1.css" rel="stylesheet">
   <link href="../style/LogInfo.css" rel="stylesheet">
   <link href="asset/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../style/reponsiveOrder1.css">
+  <style>
+    .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 300px;
+  text-align: center;
+}
+.status-options {
+    width: 50%;
+    margin: 20px 65px;
+    display: flex;
+    flex-direction: column;
+}
+
+.status-options button {
+  margin: 5px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.status-options button:disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
+
+.close-btn {
+  background: #f44336;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+    #suggestions {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      max-height: 200px;
+      overflow-y: auto;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      z-index: 1000;
+      display: none;
+    }
+
+    #suggestions li {
+      padding: 8px;
+      cursor: pointer;
+    }
+
+    #suggestions li:hover {
+      background: #f0f0f0;
+    }
+
+    #district-input {
+      width: 100%;
+      padding: 5px;
+      box-sizing: border-box;
+    }
+
+    #district-suggestions {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      max-height: 200px;
+      overflow-y: auto;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      z-index: 1000;
+    }
+
+    #district-suggestions li {
+      padding: 8px;
+      cursor: pointer;
+    }
+
+    #district-suggestions li:hover {
+      background: #f0f0f0;
+    }
+    .update-status-btn {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
-  <?php
-  include "connect.php";
-  session_start();
-  $current_page = isset($_GET['page']) ? (int)$_GET['page'] : 1;
-  $items_per_page = 5;
-  $offset = ($current_page - 1) * $items_per_page;
-
-  // Lấy điều kiện lọc từ session, nếu không có thì mặc định là "1=1"
-  $where = isset($_SESSION['filter_where']) ? $_SESSION['filter_where'] : "1=1";
-
-  $total_sql = "SELECT COUNT(*) as total FROM donhang WHERE $where";
-  $total_result = mysqli_query($myconn, $total_sql);
-  $total_row = mysqli_fetch_assoc($total_result);
-  $total_orders = $total_row['total'];
-  $total_pages = ceil($total_orders / $items_per_page);
-
-  $sql = "SELECT * FROM donhang WHERE $where LIMIT $offset, $items_per_page";
-  $result = mysqli_query($myconn, $sql);
-  ?>
-
   <div class="header">
     <div class="header-left-section">
       <p class="header-left-title">Đơn Hàng</p>
@@ -129,7 +217,7 @@
             <p>Khách hàng</p>
           </div>
         </a>
-        <a href="orderPage1.php" style="text-decoration: none; color: black;">
+        <a href="orderPage.html" style="text-decoration: none; color: black;">
           <div class="container-function-selection">
             <button class="button-function-selection" style="background-color: #6aa173;">
               <i class="fa-solid fa-list-check" style="font-size: 18px; color: #FAD4AE;"></i>
@@ -185,7 +273,7 @@
           <p>Khách hàng</p>
         </div>
       </a>
-      <a href="orderPage1.php" style="text-decoration: none; color: black;">
+      <a href="orderPage.html" style="text-decoration: none; color: black;">
         <div class="container-function-selection">
           <button class="button-function-selection" style="background-color: #6aa173;">
             <i class="fa-solid fa-list-check" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -212,110 +300,41 @@
     </div>
     <div class="main-content">
       <div class="container-order-management">
-        <div class="search-container-order">
-          <input class="search-bar-order" type="text" placeholder="Tìm kiếm đơn hàng">
-          <a href="orderDetail2.php">
-            <button class="search-icon-order">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </a>
-        </div>
         <div class="container-bar-operation">
           <p style="font-size: 30px; font-weight: 700;">Quản lý đơn hàng</p>
         </div>
-        <div class="filter-option">
-          <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa-solid fa-filter"></i>
-            <p style="font-family: Arial, sans-serif; margin-left: 3px; display: inline;">Bộ lọc</p>
-          </button>
-          <ul class="dropdown-menu">
-            <li>
-              <label for="date-from1">
-                <p style="margin-left: 15px; font-weight: bold;">Từ ngày:</p>
-              </label>
-              <input type="date" id="date-from1" name="date-from1">
-            </li><br>
-            <li>
-              <label style="margin-left: 10px; font-weight: bold;" for="end-date1">Đến ngày:</label>
-              <input type="date" id="end-date1" name="end-date1">
-            </li><br>
-            <li>
-              <label style="margin-left: 10px; font-weight: bold;" for="order-status">Đơn hàng:</label>
-              <select id="order-status">
-                <option value="all">Tất cả</option>
-                <option value="pending">Chưa xử lý</option>
-                <option value="confirmed">Đã xác nhận</option>
-                <option value="delivered">Đã giao</option>
-                <option value="cancelled">Đã hủy</option>
-              </select>
-            </li><br>
-            <li>
-              <label style="margin-left: 10px; font-weight: bold;" for="district">Huyện/Quận:</label>
-              <select id="district">
-                <option value="all">Tất cả</option>
-                <option value="Quận 1">Quận 1</option>
-                <option value="Quận 2">Quận 2</option>
-                <option value="Quận 3">Quận 3</option>
-                <option value="Quận 4">Quận 4</option>
-                <option value="Quận 5">Quận 5</option>
-                <option value="Quận 6">Quận 6</option>
-                <option value="Quận 7">Quận 7</option>
-                <option value="Quận 12">Quận 12</option>
-                <option value="Huyện Hóc Môn">Hóc Môn</option>
-                <option value="Huyện Thủ Đức">Thủ Đức</option>
-                <option value="Huyện Bình Chánh">Bình Chánh</option>
-                <option value="Quận Bình Thạnh">Bình Thạnh</option>
-              </select>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li style="margin-left: 50px;"><button type="button" class="filter-button">Lọc</button></li>
-          </ul>
-        </div>
         <div class="filter-section">
-          <form action="locdon.php" method="post" id="filter">
+          <form id="filter-form">
             <table style="width: 100%;">
               <tr>
                 <td>
                   <label for="date-from" style="font-weight: bold;">Từ ngày:</label>
-                  <input type="date" id="date-from" name="date-from">
+                  <input type="date" id="date-from" name="date_from">
                 </td>
                 <td>
-                  <label for="end-date" style="font-weight: bold;">Đến ngày:</label>
-                  <input type="date" id="end-date" name="end-date">
+                  <label for="date-to" style="font-weight: bold;">Đến ngày:</label>
+                  <input type="date" id="date-to" name="date_to">
                 </td>
                 <td>
                   <label for="order-status" style="font-weight: bold;">Tình trạng:</label>
-                  <select id="order-status" name="order-status">
+                  <select id="order-status" name="order_status">
                     <option value="all">Tất cả</option>
-                    <option value="pending">Chưa xử lý</option>
-                    <option value="confirmed">Đã xác nhận</option>
-                    <option value="delivered">Đã giao</option>
-                    <option value="cancelled">Đã hủy</option>
+                    <option value="pending">Đang xử lý</option>
+                    <option value="processing">Đã xác nhận</option>
+                    <option value="shipped">Đang giao</option>
+                    <option value="completed">Đã giao</option>
+                    <option value="canceled">Đã hủy</option>
                   </select>
                 </td>
                 <td>
-                  <label for="district" style="font-weight: bold;">Quận/Huyện:</label>
-                  <select id="district" name="district">
-                    <option value="all">Tất cả</option>
-                    <option value="Quận 1">Quận 1</option>
-                    <option value="Quận 2">Quận 2</option>
-                    <option value="Quận 3">Quận 3</option>
-                    <option value="Quận 4">Quận 4</option>
-                    <option value="Quận 5">Quận 5</option>
-                    <option value="Quận 6">Quận 6</option>
-                    <option value="Quận 7">Quận 7</option>
-                    <option value="Quận 11">Quận 11</option>
-                    <option value="Quận 12">Quận 12</option>
-                    <option value="Huyện Hóc Môn">Hóc Môn</option>
-                    <option value="Huyện Thủ Đức">Thủ Đức</option>
-                    <option value="Huyện Bình Chánh">Bình Chánh</option>
-                    <option value="Quận Bình Thạnh">Bình Thạnh</option>
-                  </select>
+                  <label for="district-input" style="font-weight: bold;">Quận/Huyện</label>
+                  <div style="position: relative;">
+                    <input type="text" id="district-input" name="district" placeholder="Nhập địa chỉ">
+                    <ul id="district-suggestions" style="display: none;"></ul>
+                  </div>
                 </td>
                 <td>
-                  <button type="submit" class="filter-button" name="btn">Lọc</button>
+                  <button type="button" class="filter-button" onclick="applyFilters()">Lọc</button>
                 </td>
               </tr>
             </table>
@@ -334,84 +353,33 @@
                 <th></th>
               </tr>
             </thead>
-            <tbody>
-              <?php
-              if (mysqli_num_rows($result) > 0) {
-                while ($row = mysqli_fetch_array($result)) {
-              ?>
-                  <tr>
-                    <td><?php echo $row["madonhang"]; ?></td>
-                    <td class="hide-index-tablet"><?php echo $row["tenkhachhang"]; ?></td>
-                    <td><?php echo $row["ngaytao"]; ?></td>
-                    <td class="hide-index-mobile"><?php echo number_format($row["giatien"], 0, ',', '.'); ?></td>
-                    <td>
-                      <?php
-                      switch ($row["trangthai"]) {
-                        case 'Đang xử lý':
-                          $statusClass = 'status pending';
-                          break;
-                        case 'Đã xác nhận':
-                          $statusClass = 'status pending4';
-                          break;
-                        case 'Đã giao':
-                          $statusClass = 'status pending2';
-                          break;
-                        case 'Đã hủy':
-                          $statusClass = 'status pending3';
-                          break;
-                        default:
-                          $statusClass = 'status pending2';
-                      }
-                      ?>
-                      <button class="<?php echo $statusClass; ?>"><?php echo $row["trangthai"]; ?></button>
-                    </td>
-                    <td><?php echo $row["diachi"]; ?></td>
-                    <td class="detail-info"><a  href="orderDetail2.php?code_Product=<?php echo $row["madonhang"]; ?>">
-                    <i class="fa-solid fa-circle-info"></i>    |  </a><a><i class="fa-solid fa-pen-to-square"></i></a></td>
-                  </tr>
-              <?php
-                }
-              } else {
-                echo "<tr><td colspan='7' style='text-align: center;'>Không có đơn hàng nào phù hợp</td></tr>";
-              }
-              ?>
+            <tbody id="order-table-body">
+              <!-- Dữ liệu sẽ được JavaScript chèn vào đây -->
             </tbody>
           </table>
         </div>
-      </div>
-      <div class="select_list">
-        <?php if ($current_page > 1): ?>
-          <a href="?page=<?php echo $current_page - 1; ?>" id="prevPage"><button style="font-style: bold;">«</button></a>
-        <?php endif; ?>
-
-        <?php for ($i = 1; $i <= $total_pages; $i++): ?>
-          <button style="margin: 0 5px; <?php echo $current_page == $i ? 'font-weight: bold;' : ''; ?>">
-            <a href="?page=<?php echo $i; ?>" style="text-decoration: none; color: inherit;"><?php echo $i; ?></a>
-          </button>
-        <?php endfor; ?>
-
-        <?php if ($current_page < $total_pages): ?>
-          <a href="?page=<?php echo $current_page + 1; ?>" id="nextPage"><button style="font-style: bold;">»</button></a>
-        <?php endif; ?>
+        <div id="updateStatusOverlay" class="overlay" style="display: none;">
+          <div class="popup">
+            <h3>Cập nhật trạng thái đơn hàng</h3>
+            <div id="statusOptions" class="status-options"></div>
+            <button onclick="closeUpdateStatusPopup()" class="close-btn">Đóng</button>
+          </div>
+        </div>
+      <div class="select_list" id="pagination-container">
+        <button id="prevPage"><<</button>
+        <div id="pageNumbers"></div>
+        <button id="nextPage">>></button>
       </div>
     </div>
   </div>
 
   <script src="./asset/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/chuyentrang.js"></script>
+  <script src="../js/orderPage.js"></script>
   <script>
-    document.getElementById('filter').addEventListener('submit', function(event) {
-      const dateFrom = document.getElementById('date-from').value;
-      const dateTo = document.getElementById('end-date').value;
-      if (dateFrom && !dateTo) {
-        alert('Vui lòng nhập cả Ngày kết thúc khi đã nhập Ngày bắt đầu!');
-        event.preventDefault();
-      } else if (!dateFrom && dateTo) {
-        alert('Vui lòng nhập cả Ngày bắt đầu khi đã nhập Ngày kết thúc!');
-        event.preventDefault();
-      }
-    });
+      function closeUpdateStatusPopup() {
+    document.getElementById('updateStatusOverlay').style.display = 'none';
+  }
+
   </script>
 </body>
-
 </html>
