--- a/admin/index/accountPage.html
+++ b/admin/index/accountPage.html
@@ -63,7 +63,7 @@
               <p style="color: black;text-align: center; font-size: 10x;">Khách hàng</p>
             </div>
           </a>
-          <a href="orderPage1.php" style="text-decoration: none; color: black;">
+          <a href="orderPage.html" style="text-decoration: none; color: black;">
             <div class="container-function-selection">
               <button class="button-function-selection">
                 <i class="fa-solid fa-list-check" style="
@@ -197,7 +197,7 @@
           <p>Khách hàng</p>
         </div>
       </a>
-      <a href="orderPage1.php" style="text-decoration: none; color: black;">
+      <a href="orderPage.html" style="text-decoration: none; color: black;">
         <div class="container-function-selection">
           <button class="button-function-selection">
             <i class="fa-solid fa-list-check" style="
@@ -294,7 +294,7 @@
   <script src="./asset/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Thay thế chỗ dữ liệu tĩnh này bằng dữ liệu database + PHP -->
   <script>
-    const userRole = "Chủ cửa hàng"; // Thay đổi giá trị này tùy theo người đăng nhập
+    const userRole = "Chủ cửa hàng"; 
 
     // Ẩn nút chỉnh sửa nếu không có quyền
     const editBtn = document.getElementById("editInfoBtn");
