--- a/admin/index/wareHouse.html
+++ b/admin/index/wareHouse.html
@@ -171,7 +171,7 @@
                   <p style="color: black; text-align: center; font-size: 10x;">Khách hàng</p>
                 </div>
               </a>
-              <a href="orderPage1.php" style="text-decoration: none; color: black;">
+              <a href="orderPage.html" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection">
                     <i class="fa-solid fa-list-check" style="font-size: 18px; color: #FAD4AE;"></i>
@@ -282,7 +282,7 @@
               <p>Khách hàng</p>
             </div>
             </a>
-            <a href="orderPage1.php" style="text-decoration: none; color: black;">
+            <a href="orderPage.html" style="text-decoration: none; color: black;">
               <div class="container-function-selection">
                 <button class="button-function-selection">
                   <i class="fa-solid fa-list-check" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -382,6 +382,6 @@
     </div>
   
         <script src="./asset/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="../js/hienthisanpham_khohang.js"></script>
+        <script src="../js/hienthisanpham_khohang.js"></script> 
     </body>
 </html>
