file test-search.js tìm kiếm mobile và desktop

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- <script src="./src/js/search.js"></script> -->
   <!-- <script src="./src/js/tim-kiem-nang-cao.js"></script> -->
   <script src="./src/js/search-common.js"></script>
+  <script src="./src/js/test-search.js"></script>
   <!-- Tìm kiếm  -->
   <title>Trang Chủ</title>
   <!-- <script src="./src/js/search.js"></script> -->
@@ -122,7 +123,7 @@
               </form>
             </div>
 
-            <script>
+            <!-- <script>
               document.getElementById("searchForm").addEventListener("submit", function (e) {
                 e.preventDefault(); // Ngăn chặn reload trang
                 let searchInput = document.getElementById("searchInput").value;
@@ -696,7 +697,7 @@
                   .replace(/'/g, "&#039;");
               }
 
-            </script>
+            </script> -->
 
 
             <!-- Header, Giỏ hàng và user -->
@@ -792,6 +793,7 @@
                     <a class="nav-link" href="#">Liên hệ</a>
                   </li>
                 </ul>
+                <!-- form tìm kiếm trên mobile  -->
                 <form class="searchFormMobile mt-3" role="search" id="searchFormMobile">
                   <div class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search"
