--- a/pages/search-result.html
+++ b/pages/search-result.html
@@ -21,6 +21,7 @@
     <!-- <script src="../src/js/filter-product.js"></script> -->
     <script src="../src/js/phan-loai.js"></script>
     <script src="../src/js/search.js"></script>
+    <script src="../src/js/test-search.js"></script>
     <title>Phân loại</title>
 </head>
 
@@ -387,12 +388,7 @@
                     </div>
                 </div>
 
-                <!-- Search results container will be filled by JS -->
-                <div id="searchResults" class="search-results-container">
-                    <div class="loading-spinner">
-                        <i class="fas fa-spinner fa-spin"></i> Đang tải...
-                    </div>
-                </div>
+
 
                 <div class="pagination" id="pagination" style="display: flex; flex-direction: row; gap: 3px;"></div>
             </div>
