--- a/pages/gio-hang.html
+++ b/pages/gio-hang.html
@@ -19,7 +19,7 @@
   <script src="../src/js/onOffSeacrhAdvance.js"></script>
   <!-- Lọc sản phẩm theo phân loại  -->
   <!-- <script src="../src/js/filter-product.js"></script> -->
-  <script src="../src/js/search.js"></script>
+  <script src="../src/js/search-index.js"></script>
   <title>Giỏ hàng</title>
 </head>
 
@@ -119,14 +119,6 @@
               </form>
             </div>
 
-            <script>
-              document.getElementById("searchForm").addEventListener("submit", function (e) {
-                e.preventDefault(); // Ngăn chặn reload trang
-                let searchInput = document.getElementById("searchInput").value;
-                window.location.href = "./search-result.html?q=" + encodeURIComponent(searchInput);
-              });
-            </script>
-
             <div class="cart-icon">
               <a href="gio-hang.html"><img src="../assets/images/cart.svg" alt="cart" /></a>
             </div>
@@ -223,68 +215,73 @@
                     <a class="nav-link" href="#">Liên hệ</a>
                   </li>
                 </ul>
-                <form class="d-flex mt-3" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search" />
-                  <!-- Nút tìm kiếm nâng cao trên mobile  -->
-                  <button type="button" class="advanced-search-toggle" onclick="toggleMobileSearch()"
-                    title="Tìm kiếm nâng cao">
-                    <i class="fas fa-sliders-h"></i>
-                  </button>
+                <!-- form tìm kiếm trên mobile  -->
+                <form class="searchFormMobile mt-3" role="search" id="searchFormMobile">
+                  <div class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search"
+                      style="height: 37.6px;" />
+                    <!-- Nút tìm kiếm nâng cao trên mobile  -->
+                    <button type="button" class="advanced-search-toggle" onclick="toggleMobileSearch()"
+                      title="Tìm kiếm nâng cao">
+                      <i class="fas fa-sliders-h"></i>
+                    </button>
 
-                  <button class="btn btn-outline-success" type="submit">
-                    Search
-                  </button>
-                </form>
-                <div id="search-filter-container-mobile" class="search-filter-container">
-                  <div class="filter-group">
-                    <label for="categoryFilter">
-                      <i class="fas fa-leaf"></i> Phân loại sản phẩm
-                    </label>
-                    <select id="categoryFilter" class="form-select">
-                      <option value="">Tất cả phân loại</option>
-                      <option value="cay-de-cham">Cây dễ chăm</option>
-                      <option value="cay-van-phong">Cây văn phòng</option>
-                      <option value="cay-de-ban">Cây để bàn</option>
-                      <option value="cay-duoi-nuoc">Cây dưới nước</option>
-                    </select>
+                    <button class="btn btn-outline-success" type="submit"
+                      style="width: 76.3px;display: flex;justify-content: center;align-items: center;height: 37.6px;">
+                      Tìm
+                    </button>
                   </div>
+                  <div id="search-filter-container-mobile" class="search-filter-container-mobile">
+                    <div class="filter-group">
+                      <label for="categoryFilter-mobile">
+                        <i class="fas fa-leaf"></i> Phân loại sản phẩm
+                      </label>
+                      <select id="categoryFilter-mobile" name="category" class="form-select">
+                        <option value="">Tất cả phân loại</option>
+                        <option value="Cây dễ chăm">Cây dễ chăm</option>
+                        <option value="Cây văn phòng">Cây văn phòng</option>
+                        <option value="Cây để bàn">Cây để bàn</option>
+                        <option value="Cây dưới nước">Cây dưới nước</option>
+                      </select>
+                    </div>
 
-                  <div class="filter-group">
-                    <label for="priceRange">
-                      <i class="fas fa-tag"></i> Khoảng giá
-                    </label>
-                    <div class="price-range-slider">
-                      <div class="price-input-group">
-                        <input type="number" id="minPriceMobile" placeholder="Từ" min="0" />
-                        <span class="price-separator">-</span>
-                        <input type="number" id="maxPriceMobile" placeholder="Đến" min="0" />
-                      </div>
-                      <div class="price-ranges">
-                        <button type="button" class="price-preset" onclick="setPriceMobile(0, 200000)">
-                          Dưới 200k
-                        </button>
-                        <button type="button" class="price-preset" onclick="setPriceMobile(200000, 500000)">
-                          200k - 500k
-                        </button>
-                        <button type="button" class="price-preset" onclick="setPriceMobile(500000, 1000000)">
-                          500k - 1tr
-                        </button>
-                        <button type="button" class="price-preset" onclick="setPriceMobile(1000000, 0)">
-                          Trên 1tr
-                        </button>
+                    <div class="filter-group">
+                      <label for="priceRange">
+                        <i class="fas fa-tag"></i> Khoảng giá
+                      </label>
+                      <div class="price-range-slider">
+                        <div class="price-input-group">
+                          <input type="number" id="minPriceMobile" name="minPrice" placeholder="Từ" min="0" />
+                          <span class="price-separator">-</span>
+                          <input type="number" id="maxPriceMobile" name="maxPrice" placeholder="Đến" min="0" />
+                        </div>
+                        <div class="price-ranges">
+                          <button type="button" class="price-preset" onclick="setPriceMobile(0, 200000)">
+                            Dưới 200k
+                          </button>
+                          <button type="button" class="price-preset" onclick="setPriceMobile(200000, 500000)">
+                            200k - 500k
+                          </button>
+                          <button type="button" class="price-preset" onclick="setPriceMobile(500000, 1000000)">
+                            500k - 1tr
+                          </button>
+                          <button type="button" class="price-preset" onclick="setPriceMobile(1000000, 0)">
+                            Trên 1tr
+                          </button>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
-                  <div class="filter-actions">
-                    <button type="button" class="btn-search" onclick="performSearchMobile()">
-                      <i class="fas fa-search"></i> Tìm kiếm
-                    </button>
-                    <button type="button" class="btn-reset" onclick="resetMobileFilters()">
-                      <i class="fas fa-redo-alt"></i> Đặt lại
-                    </button>
+                    <div class="filter-actions">
+                      <button type="submit" class="btn-search" onclick="performSearchMobile()">
+                        <i class="fas fa-search"></i> Tìm kiếm
+                      </button>
+                      <button type="button" class="btn-reset" onclick="resetMobileFilters()">
+                        <i class="fas fa-redo-alt"></i> Đặt lại
+                      </button>
+                    </div>
                   </div>
-                </div>
+                </form>
               </div>
             </div>
           </div>
