--- a/pages/user-register.html
+++ b/pages/user-register.html
@@ -13,10 +13,10 @@
   <link rel="stylesheet" href="../src/css/footer.css">
   <!-- JS  -->
   <script src="../src/js/search-common.js"></script>
-  <script src=""></script>
+  <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../src/js/main.js"></script>
   <script src="../src/js/onOffSeacrhAdvance.js"></script>
-  <script src="../src/js/search.js"></script>
+  <script src="../src/js/search-index.js"></script>
   <title>Đăng kí</title>
 </head>
 
@@ -219,31 +219,32 @@
                       <a class="nav-link" href="#">Liên hệ</a>
                     </li>
                   </ul>
-                  <form class="d-flex mt-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search"
-                      style="height: 37.6px;" />
-                    <!-- Nút tìm kiếm nâng cao trên mobile  -->
-                    <button type="button" class="advanced-search-toggle" onclick="toggleMobileSearch()"
-                      title="Tìm kiếm nâng cao">
-                      <i class="fas fa-sliders-h"></i>
-                    </button>
+                  <form class="searchFormMobile mt-3" role="search" id="searchFormMobile">
+                    <div class="d-flex">
+                      <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search"
+                        style="height: 37.6px;" />
+                      <!-- Nút tìm kiếm nâng cao trên mobile  -->
+                      <button type="button" class="advanced-search-toggle" onclick="toggleMobileSearch()"
+                        title="Tìm kiếm nâng cao">
+                        <i class="fas fa-sliders-h"></i>
+                      </button>
 
-                    <button class="btn btn-outline-success" type="submit"
-                      style="width: 76.3px;display: flex;justify-content: center;align-items: center;height: 37.6px;">
-                      Search
-                    </button>
-
-                    <div id="search-filter-container-mobile" class="search-filter-container">
+                      <button class="btn btn-outline-success" type="submit"
+                        style="width: 76.3px;display: flex;justify-content: center;align-items: center;height: 37.6px;">
+                        Tìm
+                      </button>
+                    </div>
+                    <div id="search-filter-container-mobile" class="search-filter-container-mobile">
                       <div class="filter-group">
-                        <label for="categoryFilter">
+                        <label for="categoryFilter-mobile">
                           <i class="fas fa-leaf"></i> Phân loại sản phẩm
                         </label>
-                        <select id="categoryFilter" class="form-select">
+                        <select id="categoryFilter-mobile" name="category" class="form-select">
                           <option value="">Tất cả phân loại</option>
-                          <option value="cay-de-cham">Cây dễ chăm</option>
-                          <option value="cay-van-phong">Cây văn phòng</option>
-                          <option value="cay-de-ban">Cây để bàn</option>
-                          <option value="cay-duoi-nuoc">Cây dưới nước</option>
+                          <option value="Cây dễ chăm">Cây dễ chăm</option>
+                          <option value="Cây văn phòng">Cây văn phòng</option>
+                          <option value="Cây để bàn">Cây để bàn</option>
+                          <option value="Cây dưới nước">Cây dưới nước</option>
                         </select>
                       </div>
 
@@ -253,9 +254,9 @@
                         </label>
                         <div class="price-range-slider">
                           <div class="price-input-group">
-                            <input type="number" id="minPriceMobile" placeholder="Từ" min="0" />
+                            <input type="number" id="minPriceMobile" name="minPrice" placeholder="Từ" min="0" />
                             <span class="price-separator">-</span>
-                            <input type="number" id="maxPriceMobile" placeholder="Đến" min="0" />
+                            <input type="number" id="maxPriceMobile" name="maxPrice" placeholder="Đến" min="0" />
                           </div>
                           <div class="price-ranges">
                             <button type="button" class="price-preset" onclick="setPriceMobile(0, 200000)">
@@ -275,7 +276,7 @@
                       </div>
 
                       <div class="filter-actions">
-                        <button type="button" class="btn-search" onclick="performSearchMobile()">
+                        <button type="submit" class="btn-search" onclick="performSearchMobile()">
                           <i class="fas fa-search"></i> Tìm kiếm
                         </button>
                         <button type="button" class="btn-reset" onclick="resetMobileFilters()">
